MinGW compiles don't use Microsoft's _s extensions.
Previously, all Windows builds were using Microsoft's _s "secure"
extensions, mostly to keep Visual Studio happy.  However, many of
these don't seem to be implemented under the latest versions of MinGW,
and have stopped working.  (vsprintf_s being the main culprit;  took
three hours to track down exactly why everything was exploding!)

First change:  Use `vsnprintf` instead.  Let's just assume that
everybody has that.  It's less vulnerable to buffer overflows, anyhow;
not sure why I wasn't using it before.

Second change:  Only use the `_s` variants if we're actually compiling
using MSVC  (Added a #define for that during the build process).  Assume
that everybody else has access to the actual functions.

Third change:  Switch a few #includes to using C++-style includes of C
headers.  (#include <cstdio> instead of #include <stdio.h>)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ else()
 	# find_library(SDLMAIN_LIBRARY SDL2main REQUIRED
 	# 	PATH c:/src/buildzone/lib/x86/)
 	if ( MSVC )
+		add_definitions("-D MSVC")
 		# MSVC links glew32 in.  MinGW compiles it in.
 		find_library(GLEW_LIBRARY glew32 REQUIRED
 				PATH c:/src/buildzone/lib/Release/Win32)
